[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'drawdsd'
description = 'SVG images of domain-level complexes'
authors = [{name = "Stefan Badelt", email = "bad-ants-fleet@posteo.eu"}]
maintainers = [{name = "Stefan Badelt", email = "bad-ants-fleet@posteo.eu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "drawsvg",
    "cairoSVG",
    "dsdobjects",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "codecov",
]

[project.urls]
Home = 'https://github.com/bad-ants-fleet/drawdsd'

